--- a/TennesseeDiscs/client/public/index.html
+++ b/TennesseeDiscs/client/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <title>TennesseeDiscs</title>
+    <script src="https://kit.fontawesome.com/87c0cfed8c.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
